[package]
name = "cantabile"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0.63"
anyhow = "1.0.86"
tokio = { version = "1.39.1", features = ["full"] }

# Load config
serde = { version = "1.0.204", features = ["derive"] }
toml = "0.8.15"

# Local music database
rusqlite = "0.32.1"
audiotags = "0.5.0"
